# GuardSweep

./: .gitignore  README.md  config.yaml  guardsweep.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.py
core/: alerts.py  quarantine.py  status.py
detection/: file_monitor.py  persistence_monitor.py  process_monitor.py  yara_scanner.py
docs/: README.md  project_vision.md  stack_inventory.md
intel/: network_monitor.py  spamhaus_feed.py  threat_intel.py
tests/: test_alerts.py  test_cli.py  test_persistence_import.py  test_status.py
yara_rules/: upx_packed.yar
