[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardsweep"
version = "0.1.0"
description = "Lightweight cross-platform endpoint detection and response prototype."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "geddzzy" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["venv", ".venv", "quarantine"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
